--- a/addons-custom/itsm_support/views/ticket_views.xml
+++ b/addons-custom/itsm_support/views/ticket_views.xml
@@ -13,6 +13,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
+                <field name="subject"/>
                 <field name="team_id"/>
                 <field name="user_id"/>
                 <field name="priority"/>
@@ -28,8 +29,17 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                <!-- Title section -->
+                    <div class="oe_title">
+                        <label for="subject"/>
+                        <h1>
+                            <field name="subject" placeholder="Ticket title..."/>
+                        </h1>
+                        <div class="text-muted">
+                            <field name="name" readonly="1"/>
+                        </div>
+                    </div>
                     <group>
-                        <field name="name"/>
                         <field name="partner_id"/>
                         <field name="team_id"/>
                         <field name="user_id"/>
