--- a/addons-custom/itsm_support/views/website_templates.xml
+++ b/addons-custom/itsm_support/views/website_templates.xml
@@ -66,6 +66,7 @@
                         <input type="file"
                                name="attachment"
                                multiple="multiple"
+                               accept="image/*"
                                class="form-control"/>
                         <small class="text-muted">
                             You can upload multiple files
