--- a/addons-custom/itsm_support/views/website_templates.xml
+++ b/addons-custom/itsm_support/views/website_templates.xml
@@ -107,7 +107,11 @@
                 </t>
 
                 <p class="mt-3">Our team will contact you soon.</p>
-
+                
+                <a href="/my/tickets" class="btn btn-primary mt-3">
+                    View My Tickets
+                </a>
+                
                 <a href="/" class="btn btn-secondary mt-3">
                     Back to Home
                 </a>
