add color coded stages for the portal user

--- a/addons-custom/itsm_support/views/portal_templates.xml
+++ b/addons-custom/itsm_support/views/portal_templates.xml
@@ -69,7 +69,7 @@
 
                                             <!-- Status -->
                                             <td>
-                                                <span class="badge rounded-pill bg-info text-dark">
+                                                <span t-attf-class="badge rounded-pill bg-#{t.stage_id.color}">
                                                     <t t-esc="t.stage_id.name"/>
                                                 </span>
                                             </td>
